fix(time-picker-beta): aM/PM button does not inherit visibility css property when set on component
AM/PM button does not inherit visibility css property when set on component

COMUI-2659

--- a/packages/genesys-spark-components/src/components/beta/gux-time-picker/gux-time-picker.less
+++ b/packages/genesys-spark-components/src/components/beta/gux-time-picker/gux-time-picker.less
@@ -90,12 +90,12 @@
       }
 
       .gux-meridiem {
+        display: none;
         grid-row: 1 / 1;
         grid-column: 1 / 1;
-        visibility: hidden;
 
         &.gux-visible {
-          visibility: visible;
+          display: inline-block;
         }
       }
     }
